Finished assignments Course 1

--- a/IDSP-Coursera-Training/Assignments/Assignment4.ipynb
+++ b/IDSP-Coursera-Training/Assignments/Assignment4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -61,119 +61,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def get_list_of_university_towns():\n",
-    "    '''Returns a DataFrame of towns and the states they are in from the \n",
-    "    university_towns.txt list. The format of the DataFrame should be:\n",
-    "    DataFrame( [ [\"Michigan\", \"Ann Arbor\"], [\"Michigan\", \"Yipsilanti\"] ], \n",
-    "    columns=[\"State\", \"RegionName\"]  )\n",
-    "    \n",
-    "    The following cleaning needs to be done:\n",
-    "\n",
-    "    1. For \"State\", removing characters from \"[\" to the end.\n",
-    "    2. For \"RegionName\", when applicable, removing every character from \" (\" to the end.\n",
-    "    3. Depending on how you read the data, you may need to remove newline character '\\n'. '''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    # Let's create a new variable for all the values\n",
+    "    towns = []\n",
+    "    # Read the file\n",
+    "    with open('university_towns.txt', 'r+') as file:\n",
+    "        state = \"Unknown\"\n",
+    "        # Read the \n",
+    "        for line in file:\n",
+    "            if \"[edit]\" in line:\n",
+    "                state = line.split(\"[\")[0].strip()\n",
+    "            else:\n",
+    "                # Get the country and store into the Dictionary for the dataframe\n",
+    "                towns.append([state, line.split(\"(\")[0].strip()])\n",
+    "    # Create a dataframe using the data read\n",
+    "    return pd.DataFrame(towns, columns=[\"State\", \"RegionName\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>RegionName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Auburn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Florence</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Jacksonville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Livingston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montevallo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     State    RegionName\n",
+       "0  Alabama        Auburn\n",
+       "1  Alabama      Florence\n",
+       "2  Alabama  Jacksonville\n",
+       "3  Alabama    Livingston\n",
+       "4  Alabama    Montevallo"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_list_of_university_towns().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Recession definition\n",
+    "def check_reccession(row):\n",
+    "    # By default the recesion is set to False\n",
+    "    result = False\n",
+    "    if (row[\"i-3\"] < row[\"i-4\"]) and (row[\"i-2\"] < row[\"i-3\"]):\n",
+    "        result = True\n",
+    "    # Set the final result \n",
+    "    row[\"recession\"] = result\n",
+    "    return row\n",
+    "\n",
+    "def get_GDP():\n",
+    "    # Open the Excel file\n",
+    "    excel = pd.ExcelFile(\"gdplev.xls\")\n",
+    "    # Form the first sheet only take the columns E and G with the quarter and chained GDP \n",
+    "    GDP = excel.parse(excel.sheet_names[0],names=[\"QuarterYear\",\"GDP\"],skiprows=7, parse_cols=\"E,G\")\n",
+    "    # Split the columns quarter year into year\n",
+    "    GDP[\"Year\"] = GDP[\"QuarterYear\"].map(lambda cell: cell.split(\"q\")[0])\n",
+    "    # Convert to numeric (floa, integer or wathever) values from columns Year and Quarter\n",
+    "    GDP[\"Year\"] = pd.to_numeric(GDP[\"Year\"])\n",
+    "    GDP[\"GDP\"] = pd.to_numeric(GDP[\"GDP\"])\n",
+    "    # Filter the values from 2000 (we also need previous year to compute the recession for the first year)\n",
+    "    GDP = GDP[GDP[\"Year\"] >= 1999]\n",
+    "    # Reset the index and delete the old one.\n",
+    "    GDP.reset_index(drop=True,inplace=True)\n",
+    "    # Create new columns with the last 4 quarters in order to cumpute the reccesion\n",
+    "    columns = [\"i-4\",\"i-3\",\"i-2\",\"i-1\"]\n",
+    "    values = [[np.NaN,np.NaN,np.NaN,np.NaN]] * (len(GDP[\"GDP\"]) )\n",
+    "    new_columns = pd.DataFrame(values, columns = columns)\n",
+    "    # Add to the columns the data from GDP\n",
+    "    for i in range(4, len(GDP[\"GDP\"])):\n",
+    "        new_columns.ix[i, columns] = GDP[\"GDP\"].iloc[i-4:i].values  \n",
+    "    #Merge the new columns with the GDO set from 2000\t\n",
+    "    GDP = pd.concat([GDP,new_columns], axis = 1 )\n",
+    "    #Once both set have been merged, et the index\n",
+    "    GDP.set_index(\"QuarterYear\", inplace=True)\n",
+    "    ## Let's create a new column with recession periods\n",
+    "    GDP[\"recession\"] = False\n",
+    "    # Apply recession function to the dataframe by row\n",
+    "    return GDP.apply(check_reccession,axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def get_recession_start():\n",
-    "    '''Returns the year and quarter of the recession start time as a \n",
-    "    string value in a format such as 2005q3'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    GDP = get_GDP()\n",
+    "    recGDP = GDP[GDP[\"recession\"]==True]\n",
+    "    bottom = GDP.index.get_loc(recGDP[\"GDP\"].argmin())\n",
+    "    return GDP.index[bottom- 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def get_recession_end():\n",
-    "    '''Returns the year and quarter of the recession end time as a \n",
-    "    string value in a format such as 2005q3'''\n",
-    "       \n",
-    "    return \"ANSWER\""
+    "    GDP = get_GDP()\n",
+    "    recGDP = GDP[GDP[\"recession\"]==True]\n",
+    "    return recGDP[\"GDP\"].argmax()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def get_recession_bottom():\n",
-    "    '''Returns the year and quarter of the recession bottom time as a \n",
-    "    string value in a format such as 2005q3'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    GDP = get_GDP()\n",
+    "    recGDP = GDP[GDP[\"recession\"]==True]\n",
+    "    return recGDP[\"GDP\"].argmin()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def convert_housing_data_to_quarters():\n",
-    "    '''Converts the housing data to quarters and returns it as mean \n",
-    "    values in a dataframe. This dataframe should be a dataframe with\n",
-    "    columns for 2000q1 through 2016q3, and should have a multi-index\n",
-    "    in the shape of [\"State\",\"RegionName\"].\n",
-    "    \n",
-    "    Note: Quarters are defined in the assignment description, they are\n",
-    "    not arbitrary three month periods.\n",
-    "    \n",
-    "    The resulting dataframe should have 67 columns, and 10,730 rows.\n",
-    "    '''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    homes = pd.read_csv(\"City_Zhvi_AllHomes.csv\")\n",
+    "    # Apply the ransfomration to moths to quarters\n",
+    "    hquarters = homes.loc[:,[\"RegionName\",\"State\"]]\n",
+    "    # Let's loop from 2000 to 2016\n",
+    "    for year in range(2000,2017):\n",
+    "        # Let's loop over the four quarters per year\n",
+    "        for quarter in range(0,4):\n",
+    "            #Let's loop over the 12/4 = 3 mothns per quarter\n",
+    "            columns = [str(year)+\"-\"+str((quarter * 3) + month).zfill(2) for month in range(1,4)]\n",
+    "            # Check if this quarter need to be added\n",
+    "            if (any((True for x in homes.columns.values if x in columns))):\n",
+    "                #Since get doesn't seems to work fine it the columns doesn't exist, check if a column need\n",
+    "                #to be added\n",
+    "                for column in columns:\n",
+    "                    if not column in homes.columns.values:\n",
+    "                        #Add the column with NaN values\n",
+    "                        homes[column] = np.nan\n",
+    "                hquarters[str(year) + \"q\" + str(quarter+1)] = homes.get(columns).mean(skipna=True, axis=1)\n",
+    "    # Map the states \n",
+    "    hquarters[\"State\"] = hquarters[\"State\"].map(states)\n",
+    "    #Set the new idnex\n",
+    "    return hquarters.set_index([\"State\",\"RegionName\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10730, 67)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_housing_data_to_quarters().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "202266.66666666666"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_housing_data_to_quarters().loc[\"Texas\"].loc[\"Austin\"].loc[\"2010q3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def run_ttest():\n",
-    "    '''First creates new data showing the decline or growth of housing prices\n",
-    "    between the recession start and the recession bottom. Then runs a ttest\n",
-    "    comparing the university town values to the non-university towns values, \n",
-    "    return whether the alternative hypothesis (that the two groups are the same)\n",
-    "    is true or not as well as the p-value of the confidence. \n",
-    "    \n",
-    "    Return the tuple (different, p, better) where different=True if the t-test is\n",
-    "    True at a p<0.01 (we reject the null hypothesis), or different=False if \n",
-    "    otherwise (we cannot reject the null hypothesis). The variable p should\n",
-    "    be equal to the exact p value returned from scipy.stats.ttest_ind(). The\n",
-    "    value for better should be either \"university town\" or \"non-university town\"\n",
-    "    depending on which has a lower mean price ratio (which is equivilent to a\n",
-    "    reduced market loss).'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    #Let's get the columns where the recession star and the bottom\n",
+    "    fromDate = get_recession_start()\n",
+    "    toDate = get_recession_end()\n",
+    "    # Get the housing data and the university towns\n",
+    "    data = convert_housing_data_to_quarters()\n",
+    "    towns = get_list_of_university_towns()\n",
+    "    #Let's use the same index as the data for the university Towns dataframe\n",
+    "    towns.set_index([\"State\",\"RegionName\"],inplace = True)\n",
+    "    #Compute the ratio housing prices from the bottom to the start recession period\n",
+    "    data = data.loc[:, fromDate:toDate]\n",
+    "    data[\"ratio\"] = data.loc[:, fromDate] / data.loc[:, toDate] \n",
+    "    #Get the universisty towns\n",
+    "    university = pd.merge(data,towns,how='inner',left_index=True,right_index=True)\n",
+    "    #Left outter join\n",
+    "    non_university = pd.merge(data, towns,how='outer',left_index=True, right_index=True, indicator=True)\n",
+    "    non_university = non_university[non_university._merge == 'left_only']\n",
+    "    #Call to ttest                                \n",
+    "    statistic, p_value = tuple(ttest_ind(university[\"ratio\"].dropna(), non_university[\"ratio\"].dropna()))\n",
+    "    outcome = statistic < 0\n",
+    "    different = p_value < 0.05\n",
+    "    better = [\"non-university town\", \"university town\"]\n",
+    "    return (different, p_value, better[outcome])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-e27acbcf7eb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrun_ttest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-79151f76fc97>\u001b[0m in \u001b[0;36mrun_ttest\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun_ttest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m#Let's get the columns where the recession star and the bottom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mfromDate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mtoDate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_recession_end\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Get the housing data and the university towns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-951cf91d2bfd>\u001b[0m in \u001b[0;36mget_recession_start\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mGDP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_GDP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mrecGDP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"recession\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbottom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGDP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"GDP\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mGDP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbottom\u001b[0m\u001b[0;34m-\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-f464bb4893d1>\u001b[0m in \u001b[0;36mget_GDP\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_GDP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# Open the Excel file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mexcel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExcelFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"gdplev.xls\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Form the first sheet only take the columns E and G with the quarter and chained GDP\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mGDP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexcel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexcel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"QuarterYear\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"GDP\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mskiprows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparse_cols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"E,G\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "run_ttest()"
    ]
   }
  ],
